--- a/src/panel.css
+++ b/src/panel.css
@@ -52,9 +52,25 @@ svg {
     padding: 5px;
 }
 
-#processed-joy {
+.select-group {
+    display: flex;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+    align-items: center;
+}
+
+.select-group_label {
+    min-width: 3em;
+    display: inline-block;
+    text-align: right;
+    margin-right: 1em;
+}
+
+select {
     width: 100%;
     padding: 4px;
+    margin: 4px 0;
 }
 
 #joy {
